// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kbd > renders correctly with class 1`] = `
<div>
  <kbd class="bg-default font-bold font-sans h-5 inline-flex items-center justify-center min-w-5 px-1 ring ring-accented ring-inset rounded-sm text-[0.6875rem] text-default" data-slot="base">K</kbd>
</div>
`;

exports[`Kbd > renders correctly with size lg 1`] = `
<div>
  <kbd class="bg-default font-medium font-sans h-6 inline-flex items-center justify-center min-w-6 px-1 ring ring-accented ring-inset rounded-sm text-[0.75rem] text-default" data-slot="base">K</kbd>
</div>
`;

exports[`Kbd > renders correctly with size md 1`] = `
<div>
  <kbd class="bg-default font-medium font-sans h-5 inline-flex items-center justify-center min-w-5 px-1 ring ring-accented ring-inset rounded-sm text-[0.6875rem] text-default" data-slot="base">K</kbd>
</div>
`;

exports[`Kbd > renders correctly with size sm 1`] = `
<div>
  <kbd class="bg-default font-medium font-sans h-4 inline-flex items-center justify-center min-w-4 px-1 ring ring-accented ring-inset rounded-sm text-[0.625rem] text-default" data-slot="base">K</kbd>
</div>
`;

exports[`Kbd > renders correctly with value 1`] = `
<div>
  <kbd class="bg-default font-medium font-sans h-5 inline-flex items-center justify-center min-w-5 px-1 ring ring-accented ring-inset rounded-sm text-[0.6875rem] text-default" data-slot="base">K</kbd>
</div>
`;
